<resources>
    <string name="app_name">Spanish Olive Technology</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="noText"> </string>
    <string name="btnNext">Ir a Biomasa</string>
    <string name="btnBack">Volver</string>
    <string name="btnOptionSave">Guardar     </string>
    <string name="biomasa">Comercio Biomasa</string>
    <string name="comercioa">Comercio aceituna de mesa</string>
    <string name="comercioaceite">Comercio aceite de oliva</string>
    <string name="almazara">Almazara</string>
    <string name="fabricaace">Fabrica aceituna de mesa</string>
    <string name="plantacion">Plantación</string>
    <string name="seleccionMultiple">Seleccione una o varias respuestas</string>
    <string name="plantacionQ1">País y localidad</string>
    <string name="plantacionQ2">Superficie</string>
    <string name="plantacionQ3">Destino de la producción</string>
    <string name="plantacionQ4">Inclinación terreno</string>
    <string name="plantacionQ5">Sistema de plantación</string>
    <string name="plantacionQ6">Disponibilidad de agua</string>
    <string name="plantacionQ7">Disponibilidad de pozo</string>
    <string name="plantacionQ8">Disponibilidad de red eléctrica</string>
    <string name="plantacionQ9">Análisis de suelo disponible</string>
    <string name="plantacionQ10">Rango temperaturas disponible</string>
    <string name="plantacionQ11">Pluviometría anual</string>
    <string name="plantacionQ12">Temperatura inferior a 7ºC en invierno</string>
    <string name="plantacionQ13">Cultivos en la zona</string>
    <string name="plantacionQ14">Experiencia en olivicultura</string>
    <string name="plantacionQ15">Comentarios</string>
    <string name="plantacionQ1HintOpcion1">Indique el país</string>
    <string name="plantacionQ1HintOpcion2">Indique la localidad</string>
    <string name="plantacionQ2HintOpcion2">Superficie en m2</string>
    <string name="plantacionQ6HintOpcion6">Metros cúbicos por ha</string>
    <string name="plantacionQ7HintOpcion7">Indique caudal</string>
    <string name="plantacionQ10HintOpcion10">Nº de años con registros</string>
    <string name="plantacionQ11HintOpcion11">Indicar cifra</string>
    <string name="plantacionQ12HintOpcion12">Nº de horas/día</string>
    <string name="plantacionQ13HintOpcion13">Indique cultivos</string>
    <string name="plantacionQ15HintOpcion15">Comentarios</string>
    <string name="plantacionQ1Tittle">País y localidad</string>
    <string name="plantacionQ2Tittle">Superficie</string>
    <string name="plantacionQ3Tittle">Destino de la producción</string>
    <string name="plantacionQ4Tittle">Inclinación terreno</string>
    <string name="plantacionQ5Tittle">Sistema de plantación</string>
    <string name="plantacionQ6Tittle">Disponibilidad de agua</string>
    <string name="plantacionQ7Tittle">Disponibilidad de pozo</string>
    <string name="plantacionQ8Tittle">Disponibilidad de red eléctrica</string>
    <string name="plantacionQ9Tittle">Análisis de suelo disponible</string>
    <string name="plantacionQ10Tittle">Rango temperaturas disponible</string>
    <string name="plantacionQ11Tittle">Pluviometría anual</string>
    <string name="plantacionQ12Tittle">Temperatura menor a 7ºC en invierno</string>
    <string name="plantacionQ13Tittle">Cultivos en la zona</string>
    <string name="plantacionQ14Tittle">Experiencia en olivicultura</string>
    <string name="plantacionQ15Tittle">Comentarios</string>
    <string name="plantacionQ3Option1">Aceite de oliva</string>
    <string name="plantacionQ3Option2">Aceituna de mesa</string>
    <string name="plantacionQ3Option3">Ambos</string>
    <string name="plantacionQ4Option1"> Menos de 5%</string>
    <string name="plantacionQ4Option2">5% ~ 10%</string>
    <string name="plantacionQ4Option3">10% ~ 20%</string>
    <string name="plantacionQ4Option4"> Más de 20% </string>
    <string name="plantacionQ5Option1">Superintensivo</string>
    <string name="plantacionQ5Option2">Intensivo</string>
    <string name="plantacionQ7Option1">Si</string>
    <string name="plantacionQ7Option2">No</string>
    <string name="plantacionQ8Option1">Si</string>
    <string name="plantacionQ8Option2">No</string>
    <string name="plantacionQ9Option1">Si</string>
    <string name="plantacionQ9Option2">No</string>
    <string name="plantacionQ10Option1">Si</string>
    <string name="plantacionQ10Option2">No</string>
    <string name="plantacionQ14Option1">Si</string>
    <string name="plantacionQ14Option2">No</string>
    <string name="plantacionQ1Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ2Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ3Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ4Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ5Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ6Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ7Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ8Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ9Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ10Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ11Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ12Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ13Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ14Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="plantacionQ15Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="almazaraQ1HintOption1">Indique el país</string>
    <string name="almazaraQ1HintOption2">Indique la población</string>
    <string name="almazaraQ3HintOption1">Indique toneladas/campaña</string>
    <string name="almazaraQ3HintOption2">Indique toneladas/dia</string>
    <string name="almazaraQ4HintOption1">Indique el número de variedades</string>
    <string name="almazaraQ5HintOption1">Indique el tipo de variedades</string>
    <string name="almazaraQ6HintOption1">Indique % inicial granel frente a envasado</string>
    <string name="almazaraQ7HintOption1">Nº de botellas/hora</string>
    <string name="almazaraQ8HintOption1">Capacidad en ml.</string>
    <string name="almazaraQ9HintOption1">Rango de temperaturas anual</string>
    <string name="almazaraQ15HintOption1">Escriba su comentario</string>
    <string name="almazaraQ1">País y localidad</string>
    <string name="almazaraQ2">Objetivo almanzara</string>
    <string name="almazaraQ3">Capacidad trabajo</string>
    <string name="almazaraQ4">Nº de variedades de aceituna a trabajar</string>
    <string name="almazaraQ5">Tipo  de variedades de aceituna a trabajar</string>
    <string name="almazaraQ6">Venta de aceite de oliva</string>
    <string name="almazaraQ7">Capacidad envasado</string>
    <string name="almazaraQ8">Formatos botellas</string>
    <string name="almazaraQ9">Rango temperaturas anual</string>
    <string name="almazaraQ10">Interés en recuperar hueso del alperujo para combustible</string>
    <string name="almazaraQ11">Incluir laboratorio</string>
    <string name="almazaraQ12">Construcción</string>
    <string name="almazaraQ13">Terreno</string>
    <string name="almazaraQ14">Experiencia en oleicultura</string>
    <string name="almazaraQ15">Comentarios</string>
    <string name="almazaraQ1Tittle">País y Localidad</string>
    <string name="almazaraQ2Tittle">Objetivo Almanzara</string>
    <string name="almazaraQ3Tittle">Capacidad Trabajo</string>
    <string name="almazaraQ4Tittle">Nº de Variedades de Aceituna a Trabajar</string>
    <string name="almazaraQ5Tittle">Tipo  de Variedades de Aceituna a Trabajar</string>
    <string name="almazaraQ6Tittle">Venta de Aceite de Oliva</string>
    <string name="almazaraQ7Tittle">Capacidad Envasado</string>
    <string name="almazaraQ8Tittle">Formatos Botellas</string>
    <string name="almazaraQ9Tittle">Rango Temperaturas anual</string>
    <string name="almazaraQ10Tittle">Interés en Recuperar Hueso del Alperujo para Combustible</string>
    <string name="almazaraQ11Tittle">Incluir Laboratorio</string>
    <string name="almazaraQ12Tittle">Construcción</string>
    <string name="almazaraQ13Tittle">Terreno</string>
    <string name="almazaraQ14Tittle">Experiencia en Oleicultura</string>
    <string name="almazaraQ15Tittle">Comentarios</string>
    <string name="almazaraQ2Option1">Propia producción</string>
    <string name="almazaraQ2Option2">Prestación de servicio</string>
    <string name="almazaraQ8Option1">Vidrio</string>
    <string name="almazaraQ8Option2">Pet</string>
    <string name="almazaraQ8Option3">Lata</string>
    <string name="almazaraQ8Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="fabricaQ8HintOption8">Indique Kg.</string>
    <string name="fabricaQ13HintOption13">Comentarios</string>
    <string name="fabricaQ8Tittle">Caso si Envasado Seleccionar Formato</string>
    <string name="fabricaQ13Tittle">Comentarios</string>
    <string name="fabricaQ8Option1">Latas</string>
    <string name="fabricaQ8Option2">Vidrio</string>
    <string name="fabricaQ8Option3">Bolsa</string>
    <string name="fabricaQ8Option4">PET</string>
    <string name="fabricaQ8Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
    <string name="fabricaQ13Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam.</string>
</resources>