<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.procoders.spanisholivetechnology.fragments.BiomasaFragmentDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="@color/colorPrimary"
            android:elevation="26dp"
            android:fontFamily="@font/arial"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:visibility="visible"
                android:fontFamily="@font/arial"
                android:text="@string/btnBack"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_btn_back"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:textSize="@dimen/optionTittleSizeMin"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:paddingTop="40dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/fabricaQ8Tittle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:id="@+id/fabricaQ8Description"
                android:padding="20sp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="bottom"
                android:text="@string/fabricaQ8Description"/>

            <Button
                android:id="@+id/btnOptionSave"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:visibility="visible"
                android:layout_marginRight="10sp"
                android:text="@string/btnOptionSave"
                android:fontFamily="@font/arial"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:drawableEnd="@drawable/ic_option_ok"/>


        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70sp"
            android:layout_weight="30"
            android:fontFamily="@font/arial"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <RadioGroup
                android:id="@+id/fabricaQ8Group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@drawable/option_separator"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="273dp">

                <RadioButton
                    android:id="@+id/fabricaQ8Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/rbtn_selector"
                    android:button="@null"
                    android:checked="false"
                    android:fontFamily="@font/arial"
                    android:gravity="center"
                    android:text="@string/fabricaQ8Option1"
                    android:textColor="@drawable/rbtn_textcolor_selector"
                    android:textSize="@dimen/optionRbtnSizeMax" />

                <RadioButton
                    android:id="@+id/fabricaQ8Option2"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/rbtn_selector"
                    android:button="@null"
                    android:fontFamily="@font/arial"
                    android:gravity="center"
                    android:text="@string/fabricaQ8Option2"
                    android:textColor="@drawable/rbtn_textcolor_selector"
                    android:textSize="@dimen/optionRbtnSizeMax" />

                <RadioButton
                    android:id="@+id/fabricaQ8Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/rbtn_selector"
                    android:button="@null"
                    android:fontFamily="@font/arial"
                    android:gravity="center"
                    android:text="@string/fabricaQ8Option3"
                    android:textColor="@drawable/rbtn_textcolor_selector"
                    android:textSize="@dimen/optionRbtnSizeMax" />

                <RadioButton
                    android:id="@+id/fabricaQ8Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/rbtn_selector"
                    android:button="@null"
                    android:fontFamily="@font/arial"
                    android:gravity="center"
                    android:text="@string/fabricaQ8Option4"
                    android:textColor="@drawable/rbtn_textcolor_selector"
                    android:textSize="@dimen/optionRbtnSizeMax" />


            </RadioGroup>

            <EditText
                android:id="@+id/fabricaQ8edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:fontFamily="@font/arial"
                android:gravity="center_vertical"
                android:hint="@string/fabricaQ8HintOption8"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>