<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.procoders.spanisholivetechnology.fragments.BiomasaFragmentDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="@color/colorPrimary"
            android:elevation="26dp"
            android:fontFamily="@font/arial"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:visibility="visible"
                android:fontFamily="@font/arial"
                android:text="@string/btnBack"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_btn_back"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:text="@string/fabricaQ13Tittle"
                android:textSize="@dimen/optionTittleSizeMin"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:paddingTop="40dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial"
                android:padding="20sp"
                android:id="@+id/fabricaQ13Description"
                android:text="@string/fabricaQ13Description"
                android:textColor="@color/colorWhite"
                android:layout_gravity="bottom"/>

            <Button
                android:id="@+id/btnOptionSave"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:visibility="visible"
                android:layout_marginRight="10sp"
                android:text="@string/btnOptionSave"
                android:fontFamily="@font/arial"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:drawableEnd="@drawable/ic_option_ok"/>


        </android.support.design.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="30"
            android:layout_marginTop="70sp"
            android:fontFamily="@font/arial">


            <EditText
                android:id="@+id/fabricaQ13edt"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/arial"
                android:hint="@string/fabricaQ13HintOption13"
                android:inputType="textMultiLine" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
